Improve light mode box corners, fix missing light/dark mode transition

--- a/colors.less
+++ b/colors.less
@@ -60,7 +60,7 @@
 @header-shadow--light: fadeout(darken(@background-color--light, 17%), 20%);
 
 @glb-box: lighten(@background-color, 2.5%);
-@glb-box-corners: darken(@background-color, 3%);
+@glb-box-corners: darken(@glb-box, 5.5%);
 @glb-box-shadow: fadeout(darken(@glb-box, 4%), 20%);
 @glb-box-extreme-shadow: fadeout(darken(@background-color, 3%), 10%);
 @glb-box-bordertop: lighten(@glb-box, 17%);
@@ -70,7 +70,7 @@
 @glb-box-description-foreground: darken(@foreground-color, 7%);
 
 @glb-box--light: lighten(@background-color--light, 3%);
-@glb-box-corners--light: lighten(@foreground-color--light, 20%);
+@glb-box-corners--light: darken(@glb-box--light, 9%);
 @glb-box-shadow--light: fadeout(darken(@glb-box--light, 6%), 20%);
 @glb-box-extreme-shadow--light: fadeout(darken(@background-color--light, 9%), 10%);
 @glb-box-bordertop--light: lighten(@glb-box--light, 17%);
